--- a/.test-skript.yml
+++ b/.test-skript.yml
@@ -18,7 +18,8 @@ compile_test:
     - npm install
     - npm run compile
   artifacts:
+    paths:
+      - /root/.npm/_logs/
+    expire_in: 1 week
     reports:
-      paths:
-        - /root/.npm/_logs/
-      expire_in: 1 week
+      codequality: test.xml
